# qpfolio

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER.md  DEVELOPMENT_PLAN.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/: github-actions-codecov.yml
_static/artifacts/v0/: frontier.csv  metadata.json
doc/: Makefile  README.md  about.rst  api_personal_indexing.rst  architecture_and_workflow.rst  changelog.rst  comparison.rst  conf.py  contributing.rst  data_generation.rst  getting_started.rst  index.rst  introduction.rst  methods.rst  philosophy_and_goals.rst  project_information.rst  requirements.txt  testing_strategy.rst  usage.rst  usage_guide.rst  visualization.rst
doc/latex/: architecture_and_workflow.tex  contributing.tex  getting_started.tex  philosophy_and_goals.tex  project_information.tex  testing_strategy.tex  three_qp_problems.tex  usage_guide.tex
doc/scripts/: generate_docs_artifacts.py  generate_visualizations_v1.py  generate_visualizations_v2.py
paper/: qpfolio_paper.tex
qpfolio/: __init__.py  personal_indexing.py
qpfolio/core/: __init__.py  data.py  estimates.py  frontier.py  metrics.py  models.py  solve.py  types.py  visualize.py
qpfolio/examples/: personal_indexing_basic.py  personal_indexing_esg.py  personal_indexing_taxaware.py
qpfolio/reporting/: html.py
qpfolio/simulation/: gbm.py
qpfolio/solvers/: __init__.py  base.py  mathopt_osqp.py
tests/: test_smoke_import.py
tests/e2e/: test_frontier_to_frame_and_values.py
tests/fixtures/: record_builder.py
tests/mocks/: api_client.py
tests/unit/: test_cli.py  test_config_command.py  test_cross_ref_client.py  test_data_simulation.py  test_estimates.py  test_frontier_monotonicity.py  test_metadata_refresher.py  test_metrics_identities.py  test_personal_indexing.py  test_plumbing_legacy_roundtrip.py  test_plumbing_solver_info_schema.py  test_plumbing_triplet_roundtrip.py  test_smoke_import.py  test_solver_mvo_feasibility.py  test_validator.py  test_visualize_smoke.py
(+79 files in other folders)
