[build-system]
requires = ["setuptools>=64", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "qpfolio"
version = "0.1.0a0"
description = "Quadratic programming portfolio optimization library using OR-Tools and OSQP."
readme = "README.md"
authors = [
    { name = "Rolf Carlson", email = "hrolfrc@gmail.com"}
]

license = { file = "LICENSE" }
keywords = ["finance", "optimization", "portfolio", "quadratic-programming", "mean-variance", "efficient-frontier"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "ortools>=9.10",
    "osqp>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.4",
    "build",
    "twine",
]
docs = [
    "sphinx>=7.0",
    "sphinx-autodoc-typehints>=1.24",
    "furo",
]
notebooks = [
    "jupyterlab",
    "notebook",
]
reports = [
    "jinja2>=3.1"
]

[project.urls]
Homepage = "https://github.com/hrolfrc/qpfolio"
Documentation = "https://qpfolio.readthedocs.io"
Repository = "https://github.com/hrolfrc/qpfolio"
Issues = "https://github.com/hrolfrc/qpfolio/issues"


[tool.setuptools.packages.find]
where = ["."]
include = ["qpfolio*"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
testpaths = ["qpfolio/tests"]
addopts = "-v --cov=qpfolio --cov-report=term-missing"
